k8s-AI-app/genai-stack/namespace-genai-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genai-stack
  labels:
    demo: roadshow
    repo: demo-apps
